--- a/index.html
+++ b/index.html
@@ -103,11 +103,10 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Obsessed Book</h3>
-                  <p>web, branding</p>
+                  <h3>Пожарная система</h3>
                 </div>
               </div>
-              <img src="images/img_1.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/fire_system/f9.jpg" height="400" class="lazyload " alt="Images" />
             </a>
           </div>
 
@@ -116,11 +115,10 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Book Binding</h3>
-                  <p>illustration, application</p>
+                  <h3>Сантехника</h3>
                 </div>
               </div>
-              <img src="images/img_2.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/plumbing/p9.jpg" class="lazyload  img-fluid" alt="Images" />
             </a>
           </div>
 
@@ -129,11 +127,10 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Fresh Fruits</h3>
-                  <p>web, branding</p>
+                  <h3>Видеонаблюдения</h3>
                 </div>
               </div>
-              <img src="images/img_3.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/video/v2.jpg" class="lazyload  img-fluid" alt="Images" />
             </a>
           </div>
 
@@ -142,11 +139,10 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Powerful Speaker</h3>
-                  <p>web, branding</p>
+                  <h3>Логистика</h3>
                 </div>
               </div>
-              <img src="images/img_4.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/logistics/l5.png" class="lazyload  img-fluid" alt="Images" />
             </a>
           </div>
 
@@ -155,11 +151,10 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Wireless Headset</h3>
-                  <p>web, branding</p>
+                  <h3>Електромонтаж</h3>
                 </div>
               </div>
-              <img src="images/img_5.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/electric/e6.jpg" class="lazyload  img-fluid" alt="Images" />
             </a>
           </div>
 
