--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <h3>Видеонаблюдения</h3>
                 </div>
               </div>
-              <img src="images/video/v2.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/video/v2.jpg" height="400" class="lazyload " alt="Images" />
             </a>
           </div>
 
@@ -154,7 +154,7 @@
                   <h3>Електромонтаж</h3>
                 </div>
               </div>
-              <img src="images/electric/e6.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/electric/e2.jpg" height="400" class="lazyload" alt="Images" />
             </a>
           </div>
 
@@ -164,11 +164,10 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Black & White Cubic</h3>
-                  <p>web, branding</p>
+                  <h3>Услуги клининга</h3>
                 </div>
               </div>
-              <img src="images/img_6.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/cleaning/c4.jpg" height="400" class="lazyload"  alt="Images" />
             </a>
           </div>
 
@@ -177,91 +176,14 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Nike Shoe</h3>
-                  <p>illustration, application</p>
+                  <h3>Электротехническая лаборатория</h3>
                 </div>
               </div>
-              <img src="images/img_7.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/laboratory/el8.jpg" height="300" class="lazyload" alt="Images" />
             </a>
           </div>
 
-          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-              <div class="overlay">
-                <span class="wrap-icon icon-link2"></span>
-                <div class="portfolio-item-content">
-                  <h3>Old Typewriter</h3>
-                  <p>web, branding</p>
-                </div>
-              </div>
-              <img src="images/img_8.jpg" class="lazyload  img-fluid" alt="Images" />
-            </a>
-          </div>
-
-          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-              <div class="overlay">
-                <span class="wrap-icon icon-link2"></span>
-                <div class="portfolio-item-content">
-                  <h3>Walking Man</h3>
-                  <p>web, branding</p>
-                </div>
-              </div>
-              <img src="images/img_9.jpg" class="lazyload  img-fluid" alt="Images" />
-            </a>
-          </div>
-
-          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-              <div class="overlay">
-                <span class="wrap-icon icon-link2"></span>
-                <div class="portfolio-item-content">
-                  <h3>Progress Journal</h3>
-                  <p>web, branding</p>
-                </div>
-              </div>
-              <img src="images/img_10.jpg" class="lazyload  img-fluid" alt="Images" />
-            </a>
-          </div>
-
-          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-              <div class="overlay">
-                <span class="wrap-icon icon-link2"></span>
-                <div class="portfolio-item-content">
-                  <h3>The Dog</h3>
-                  <p>web, branding</p>
-                </div>
-              </div>
-              <img src="images/img_11.jpg" class="lazyload  img-fluid" alt="Images" />
-            </a>
-          </div>
-
-          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-              <div class="overlay">
-                <span class="wrap-icon icon-link2"></span>
-                <div class="portfolio-item-content">
-                  <h3>Beautiful Woman</h3>
-                  <p>web, branding</p>
-                </div>
-              </div>
-              <img src="images/img_12.jpg" class="lazyload  img-fluid" alt="Images" />
-            </a>
-          </div>
-
-          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-3.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
-              <div class="overlay">
-                <span class="wrap-icon icon-link2"></span>
-                <div class="portfolio-item-content">
-                  <h3>Book Binding</h3>
-                  <p>web, branding</p>
-                </div>
-              </div>
-              <img src="images/img_2.jpg" class="lazyload  img-fluid" alt="Images" />
-            </a>
-          </div>
+        
 
 
         </div>
