--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
         <ul class="js-clone-nav d-none d-lg-inline-none site-menu float-right site-nav-wrap">
           <li><a href="#home-section" class="nav-link active">Главная</a></li>
-          <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
+          <li><a href="#services-section" class="nav-link">Услуги</a></li>
          
             <li><a href="#about-section" class="nav-link">O нас</a></li>
          
-          <li><a href="#services-section" class="nav-link">Services</a></li>
+          <!-- <li><a href="#services-section" class="nav-link">Services</a></li> -->
 
           <li><a href="#contact-section" class="nav-link">Kонтакты</a></li>
         </ul>
@@ -87,7 +87,7 @@
   </div>
 
 
-  <div class="untree_co-section untree_co-section-4 pb-0"  id="portfolio-section">
+  <div class="untree_co-section untree_co-section-4 pb-0"  id="services-section">
     <div class="container">
 
 
@@ -99,7 +99,7 @@
         <div id="posts" class="row">
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-1.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
+            <a href="pages/fire-system.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
