--- a/pages/fire-system.html
+++ b/pages/fire-system.html
@@ -1,9 +1,3 @@
-<!-- /*
-* Template Name: Minimal
-* Template Author: Untree.co
-* Author URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!doctype html>
 <html lang="en">
 
@@ -28,8 +22,6 @@
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
-
-  <title>Minimal Free HTML Template by Untree.co</title>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="100">
@@ -47,29 +39,17 @@
   <nav class="site-nav dark mb-5 site-navbar-target">
     <div class="container">
       <div class="site-navigation">
-        <a href="index.html" class="logo m-0">Space<span class="text-primary">.</span></a>
+        <a href="index.html" class="logo m-0"><img class="logo" src="logo.svg"></span></a>
 
-        <ul class="js-clone-nav d-none d-lg-inline-none site-menu float-right">
-          <li><a href="#home-section" class="nav-link active">Home</a></li>
-          <li><a href="#portfolio-section">Portfolio</a></li>
+        <ul class="js-clone-nav d-none d-lg-inline-none site-menu float-right site-nav-wrap">
+          <li><a href="#home-section" class="nav-link active">Главная</a></li>
+          <li><a href="#services-section" class="nav-link">Услуги</a></li>
+         
+            <li><a href="#about-section" class="nav-link">O нас</a></li>
+         
+          <!-- <li><a href="#services-section" class="nav-link">Services</a></li> -->
 
-          <li class="has-children">
-            <a href="#about-section">About</a>
-            <ul class="dropdown">
-              <li><a href="elements.html">Elements</a></li>
-              <li class="has-children">
-                <a href="#">Menu Two</a>
-                <ul class="dropdown">
-                  <li><a href="#">Sub Menu One</a></li>
-                  <li><a href="#">Sub Menu Two</a></li>
-                  <li><a href="#">Sub Menu Three</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Menu Three</a></li>
-            </ul>
-          </li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact us</a></li>
+          <li><a href="#contact-section" class="nav-link">Kонтакты</a></li>
         </ul>
 
         <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-inline-block" data-toggle="collapse" data-target="#main-navbar">
@@ -90,52 +70,63 @@
       <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
 
         <div class="portfolio-single-inner">
-          <h2 class="heading-portfolio-single-h2 text-black">Slider Portfolio Details</h2>
+          <h2 class="heading-portfolio-single-h2 text-black">Пожарная система</h2>
 
           <div class="row justify-content-between mb-5">
             <div class="col-12 mb-4">
               <div class="owl-carousel single-slider">
                 <figure class="mb-4">
-                  <img src="images/portfolio_1.jpg" alt="Image" class="img-fluid">
+                  <img src="images/fire_system/f1.jpg" alt="Image" class="img-fluid">
                 </figure>
                 <figure class="mb-4">
-                  <img src="images/portfolio_2.jpg" alt="Image" class="img-fluid">
+                  <img src="images/fire_system/f2.jpg" alt="Image" class="img-fluid">
                 </figure>
-              </div>
+                <figure class="mb-4">
+                  <img src="images/fire_system/f3.jpg" alt="Image" class="img-fluid">
+                </figure>
+                <figure class="mb-4">
+                  <img src="images/fire_system/f5.jpg" alt="Image" class="img-fluid">
+                </figure>
+                <figure class="mb-4">
+                  <img src="images/fire_system/f6.jpg" alt="Image" class="img-fluid">
+                </figure>
+                <figure class="mb-4">
+                  <img src="images/fire_system/f7.jpg" alt="Image" class="img-fluid">
+                </figure>
+                <figure class="mb-4">
+                  <img src="images/fire_system/f8.jpg" alt="Image" class="img-fluid">
+                </figure>
+                <figure class="mb-4">
+                  <img src="images/fire_system/f9.jpg" alt="Image" class="img-fluid">
+                </figure>
+                <figure class="mb-4">
+                  <img src="images/fire_system/f10.jpg" alt="Image" class="img-fluid">
+                </figure>
             </div>
-            <div class="col-12 my-5">
-              <div class="row">
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                  <div class="detail-v1">
-                    <span class="detail-label">Project Date</span>
-                    <span class="detail-val">March 9th, 2020</span>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                  <div class="detail-v1">
-                    <span class="detail-label">Role</span>
-                    <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                  <div class="detail-v1">
-                    <span class="detail-label">Client</span>
-                    <span class="detail-val">Untree.co</span>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                  <div class="detail-v1">
-                    <span class="detail-label">Visit</span>
-                    <span class="detail-val"><a href="https://untree.co">https://untree.co/</a></span>
-                  </div>
-                </div>
-              </div>
+            <div class="col-md-12 my-5">
+              <p>Пожарная безопасность - это совокупность мер, направленных на уменьшение разрушений, вызванных пожаром.
+                Меры пожарной безопасности включают в себя те, которые предназначены для предотвращения воспламенения неконтролируемого пожара, и те,
+                которые используются для ограничения распространения и воздействия пожара.</p>
             </div>
-            <div class="col-md-6">
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <div class="col-md-12">
+              <p>Системы пожарной безопасности – это не просто обязательный элемент инженерных коммуникаций,
+                призванный предотвратить возгорание, минимизировать ущерб от пожара и спасти жизни людей.
+                Они похожи на живой, постоянно развивающийся организм, требующий ухода и правильного обращения.
+                Нашими специалистами в настоящее время выполняются виды работ, как:</p>
             </div>
-            <div class="col-md-6">
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+            <div class="col-md-12">
+            <p>Проектирование, монтаж, наладка, ремонт и обслуживание устройств:</p> 
+
+           <ul>
+            <li>Автоматической пожарной сигнализации</li>
+            <li>Системы оповещения и управления эвакуацией людей при пожаре</li>
+            <li>Системы газового пожаротушения</li>
+            <li>Системы порошкового пожаротушения</li>
+            <li>Спринклерного пожаротушения</li>
+            <li>Внутреннего противопожарного водопровода</li>
+            <li>Системы дымоудаления</li>
+           </ul>
+           <p>Задача каждой из этих систем – предотвращение пожара, спасение жизни людей, сохранность материальных ценностей.</p>
             </div>
           </div>
 
