--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-1.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="6">
+            <a href="pages/cleaning.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="6">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
@@ -173,7 +173,7 @@
           </div>
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-2.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="7">
+            <a href="pages/laboratory.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="7">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
