home page errors fixed

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </div>
 
 
-  <div class="untree_co-section untree_co-section-4 pb-0"  id="services-section">
+  <div class="untree_co-section untree_co-section-4 pb-0"  id="services-section" name="services-section">
     <div class="container">
 
 
@@ -99,7 +99,7 @@
         <div id="posts" class="row">
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="pages/fire-system.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
+            <a href="fire-system.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
@@ -112,7 +112,7 @@
 
           
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="pages/plumbing.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="2">
+            <a href="plumbing.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="2">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
@@ -124,7 +124,7 @@
           </div>
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="pages/video.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
+            <a href="video.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="3">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
@@ -136,7 +136,7 @@
           </div>
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="pages/logistics.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="4">
+            <a href="logistics.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="4">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
@@ -148,7 +148,7 @@
           </div>
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="pages/electric.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="5">
+            <a href="electric.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="5">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
@@ -161,7 +161,7 @@
 
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="pages/cleaning.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="6">
+            <a href="cleaning.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="6">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
@@ -173,7 +173,7 @@
           </div>
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="pages/laboratory.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="7">
+            <a href="laboratory.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="7">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
@@ -228,7 +228,7 @@
     </div>
 
 
-    <div class="untree_co-section pb-0" id="services-section">
+    <!-- <div class="untree_co-section pb-0" id="services-section">
       <div class="container">
         <div class="row mb-4">
           <div class="col-lg-7 text-center mx-auto">
@@ -306,10 +306,10 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
 
-    <div class="untree_co-section pb-0">
+    <!-- <div class="untree_co-section pb-0">
       <div class="container">
         <div class="row mb-4">
           <div class="col-lg-7 text-center mx-auto">
@@ -358,14 +358,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="untree_co-section testimonial-wrap">
       <div class="container">
         <div class="row mb-5">
           <div class="col-lg-7 text-center mx-auto">
-            <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Testimonials</strong></h2>
-            <p class="gsap-reveal-hero">What clients say...</p>
+            <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Наши клиенты</strong></h2>
 
             <div class="wave gsap-reveal-hero" >
               <svg>
@@ -377,9 +376,6 @@
 
 
         <div data-aos="fade-left" data-aos-delay="200">
-
-
-
           <div class="owl-carousel owl-3-slider">
             <div class="item">
               <div class="testimonial-v1">
@@ -388,9 +384,6 @@
                   <h3>James Smith</h3>
                   <span class="caption">CEO &amp; Co-Founder</span>
                 </div>
-                <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                </blockquote>
               </div>
             </div>
             <!-- END .item -->
@@ -402,9 +395,6 @@
                   <h3>Jenny Wilson</h3>
                   <span class="caption">CEO &amp; Co-Founder</span>
                 </div>
-                <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                </blockquote>
               </div>
             </div>
             <!-- END .item -->
@@ -416,9 +406,6 @@
                   <h3>Dan Anderson</h3>
                   <span class="caption">CEO &amp; Co-Founder</span>
                 </div>
-                <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                </blockquote>
               </div>
             </div>
             <!-- END .item -->
@@ -430,9 +417,6 @@
                   <h3>James Smith</h3>
                   <span class="caption">CEO &amp; Co-Founder</span>
                 </div>
-                <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                </blockquote>
               </div>
             </div>
             <!-- END .item -->
@@ -441,7 +425,7 @@
       </div>
     </div>
 
-    <div class="untree_co-section">
+    <!-- <div class="untree_co-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-lg-7 text-center mx-auto">
@@ -494,16 +478,14 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
-    <div class="untree_co-section" id="contact-section">
+    <!-- <div class="untree_co-section" id="contact-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-lg-7 text-center mx-auto">
             <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Contact</strong></h2>
-            <p class="gsap-reveal-hero">Available for work. Get in touch</p>
-
             <div class="wave gsap-reveal-hero" >
               <svg>
                 <path d="M10,10 L50,100 L90,50" stroke="#0389ff"></path>
@@ -547,73 +529,60 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="site-footer">
       <div class="container">
-
         <div class="row">
           <div class="col-lg-3">
             <div class="widget">
-              <h3>Home</h3>
+              <h3>Главная</h3>
               <ul class="list-unstyled float-left links">
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Privacy</a></li>
+                <li><a href="#services-section">Услуги</a></li>
+                <li><a href="#">O нас</a></li>
+                <li><a href="#">Kонтакты</a></li>
               </ul>
-            </div> <!-- /.widget -->
-          </div> <!-- /.col-lg-3 -->
+            </div>
+          </div>
 
           <div class="col-lg-3">
             <div class="widget">
-              <h3>Projects</h3>
-              <ul class="list-unstyled float-left links">
-                <li><a href="#">HTML5</a></li>
-                <li><a href="#">CSS3</a></li>
-                <li><a href="#">Untree.co</a></li>
-                <li><a href="#">Free Templates</a></li>
-                <li><a href="#">WordPress Themes</a></li>
+              <h3>Услуги</h3>
+              <ul class="list-unstyled float-left links" id="services-section">
+                <li><a href="fire-system.html">Пожарная система</a></li>
+                <li><a href="plumbing.html">Сантехника</a></li>
+                <li><a href="video.html">Видеонаблюдения</a></li>
+                <li><a href="logistics.html">Логистика</a></li>
+                <li><a href="electric.html">Електромонтаж</a></li>
+                <li><a href="cleaning.html">Услуги клининга</a></li>
+                <li><a href="laboratory.html">Электротехническая лаборатория</a></li>
               </ul>
-            </div> <!-- /.widget -->
-          </div> <!-- /.col-lg-3 -->
+            </div>
+          </div> 
 
-          <div class="col-lg-3">
+
+          <div class="col-lg-3" id="contact-section">
             <div class="widget">
-              <h3>Services</h3>
-              <ul class="list-unstyled float-left links">
-                <li><a href="#">Untree.co</a></li>
-                <li><a href="#">jQuery</a></li>
-                <li><a href="#">Bootstrap</a></li>
-                <li><a href="#">Freebies</a></li>
-              </ul>
-            </div> <!-- /.widget -->
-          </div> <!-- /.col-lg-3 -->
-
-
-          <div class="col-lg-3">
-            <div class="widget">
-              <h3>Contact</h3>
-              <address>43 Raymouth Rd. Baltemoer, London 3910</address>
+              <h3>Kонтакты</h3>
+              <address>ООО “SPEKTR AVTOMATIKA” 100 207, город Ташкент, Яшнабадский район, ул., Паркентская, 327.
+              </address>
               <ul class="list-unstyled links mb-4">
-                <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-                <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-                <li><a href="mailto:info@mydomain.com">info@mydomain.com</a></li>
+                <li><a href="tel://11234567890">+(+998 99) 171 30 00</a></li>
               </ul>
+            </div>
+          </div> 
 
-              <h3>Connect</h3>
+          <div class="col-lg-3">
+            <div class="widget">
+              <h3>Социальные сети</h3>
               <ul class="list-unstyled social">
                 <li><a href="#"><span class="icon-instagram"></span></a></li>
                 <li><a href="#"><span class="icon-twitter"></span></a></li>
-                <li><a href="#"><span class="icon-facebook"></span></a></li>
+                <li><a href="https://www.facebook.com/spektravtomatika2020/"><span class="icon-facebook"></span></a></li>
                 <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                <li><a href="#"><span class="icon-pinterest"></span></a></li>
-                <li><a href="#"><span class="icon-dribbble"></span></a></li>
               </ul>
-
-            </div> <!-- /.widget -->
-          </div> <!-- /.col-lg-3 -->
+            </div>
+          </div>
 
         </div> <!-- /.row -->
 
