--- a/fire-system.html
+++ b/fire-system.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" href="favicon.svg">
 
   <meta name="description" content="" />
   <meta name="keywords" content="" />
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <title>Spektr</title>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="100">
@@ -42,14 +44,12 @@
         <a href="index.html" class="logo m-0"><img class="logo" src="logo.svg"></span></a>
 
         <ul class="js-clone-nav d-none d-lg-inline-none site-menu float-right site-nav-wrap">
-          <li><a href="#home-section" class="nav-link active">Главная</a></li>
-          <li><a href="#services-section" class="nav-link">Услуги</a></li>
+          <li><a href="index.html" class="nav-link active">Главная</a></li>
+          <li><a href="index.html#services-section" class="nav-link">Услуги</a></li>
          
-            <li><a href="#about-section" class="nav-link">O нас</a></li>
-         
-          <!-- <li><a href="#services-section" class="nav-link">Services</a></li> -->
+            <li><a href="index.html#about-section" class="nav-link">O нас</a></li>
 
-          <li><a href="#contact-section" class="nav-link">Kонтакты</a></li>
+          <li><a href="index.html#contact-section" class="nav-link">Kонтакты</a></li>
         </ul>
 
         <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-inline-block" data-toggle="collapse" data-target="#main-navbar">
