navbar and footer parts done

--- a/fire-system.html
+++ b/fire-system.html
@@ -48,6 +48,7 @@
           <li><a href="index.html#services-section" class="nav-link">Услуги</a></li>
          
             <li><a href="index.html#about-section" class="nav-link">O нас</a></li>
+            <li><a href="index.html#clients-section" class="nav-link">Наши клиенты</a></li>
 
           <li><a href="index.html#contact-section" class="nav-link">Kонтакты</a></li>
         </ul>
@@ -138,70 +139,56 @@
 
   <div class="site-footer">
     <div class="container">
-
       <div class="row">
         <div class="col-lg-3">
           <div class="widget">
-            <h3>Home</h3>
+            <h3>Главная</h3>
             <ul class="list-unstyled float-left links">
-              <li><a href="#">Untree.co</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms</a></li>
-              <li><a href="#">Privacy</a></li>
+              <li><a href="#services-section">Услуги</a></li>
+              <li><a href="#">O нас</a></li>
+              <li><a href="#">Kонтакты</a></li>
             </ul>
-          </div> <!-- /.widget -->
-        </div> <!-- /.col-lg-3 -->
+          </div>
+        </div>
 
         <div class="col-lg-3">
           <div class="widget">
-            <h3>Projects</h3>
-            <ul class="list-unstyled float-left links">
-              <li><a href="#">HTML5</a></li>
-              <li><a href="#">CSS3</a></li>
-              <li><a href="#">Untree.co</a></li>
-              <li><a href="#">Free Templates</a></li>
-              <li><a href="#">WordPress Themes</a></li>
+            <h3>Услуги</h3>
+            <ul class="list-unstyled float-left links" id="services-section">
+              <li><a href="fire-system.html">Пожарная система</a></li>
+              <li><a href="plumbing.html">Сантехника</a></li>
+              <li><a href="video.html">Видеонаблюдения</a></li>
+              <li><a href="logistics.html">Логистика</a></li>
+              <li><a href="electric.html">Електромонтаж</a></li>
+              <li><a href="cleaning.html">Услуги клининга</a></li>
+              <li><a href="laboratory.html">Электротехническая лаборатория</a></li>
             </ul>
-          </div> <!-- /.widget -->
-        </div> <!-- /.col-lg-3 -->
+          </div>
+        </div> 
 
-        <div class="col-lg-3">
+
+        <div class="col-lg-3" id="contact-section">
           <div class="widget">
-            <h3>Services</h3>
-            <ul class="list-unstyled float-left links">
-              <li><a href="#">Untree.co</a></li>
-              <li><a href="#">jQuery</a></li>
-              <li><a href="#">Bootstrap</a></li>
-              <li><a href="#">Freebies</a></li>
-            </ul>
-          </div> <!-- /.widget -->
-        </div> <!-- /.col-lg-3 -->
-
-
-        <div class="col-lg-3">
-          <div class="widget">
-            <h3>Contact</h3>
-            <address>43 Raymouth Rd. Baltemoer, London 3910</address>
+            <h3>Kонтакты</h3>
+            <address>ООО “SPEKTR AVTOMATIKA” 100 207, город Ташкент, Яшнабадский район, ул., Паркентская, 327.
+            </address>
             <ul class="list-unstyled links mb-4">
-              <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-              <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-              <li><a href="mailto:info@mydomain.com">info@mydomain.com</a></li>
+              <li><a href="tel://11234567890">+(+998 99) 171 30 00</a></li>
             </ul>
+          </div>
+        </div> 
 
-            <h3>Connect</h3>
+        <div class="col-lg-3">
+          <div class="widget">
+            <h3>Социальные сети</h3>
             <ul class="list-unstyled social">
               <li><a href="#"><span class="icon-instagram"></span></a></li>
               <li><a href="#"><span class="icon-twitter"></span></a></li>
-              <li><a href="#"><span class="icon-facebook"></span></a></li>
+              <li><a href="https://www.facebook.com/spektravtomatika2020/"><span class="icon-facebook"></span></a></li>
               <li><a href="#"><span class="icon-linkedin"></span></a></li>
-              <li><a href="#"><span class="icon-pinterest"></span></a></li>
-              <li><a href="#"><span class="icon-dribbble"></span></a></li>
             </ul>
-
-          </div> <!-- /.widget -->
-        </div> <!-- /.col-lg-3 -->
+          </div>
+        </div>
 
       </div> <!-- /.row -->
 
@@ -209,17 +196,7 @@
 
 
 
-      <div class="row mt-5">
-        <div class="col-12 text-center">
-          <p class=" mb-0">&copy; 2020. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class=""><strong>Untree.co</strong></a> Distributed By <a href="https://themewagon.com">ThemeWagon</a> </p>
-          <p class="">
-            <span class="mx-2">Twitter <a href="https://twitter.com/untree_co">@Untree_co</a></span>
-            <span>&bullet;</span>
-            <span class="mx-2">Facebook <a href="https://web.facebook.com/Untree.co">@Untree.co</a></span>
-          </p>
-
-        </div>
-      </div>
+     
     </div> <!-- /.container -->
   </div> <!-- /.site-footer -->
 
