our clients section done

--- a/index.html
+++ b/index.html
@@ -403,17 +403,17 @@
             </div>
             <!-- END .item -->
             <div class="item">
-              <div class="testimonial-v1">
-                <img src='images/clients/7.svg' alt="Image">
+              <div class="testimonial-v1 ">
+                  <img src='images/clients/2.svg' class="img-fluid" alt="Image">
                 <div class="mb-4">
-                  <h3>Sheer Chai</h3>
+                  <h3>Anorbank</h3>
                 </div>
               </div>
             </div>
             <!-- END .item -->
             <div class="item">
               <div class="testimonial-v1">
-                <img src='images/clients/7.svg' alt="Image">
+                <img src='images/clients/6.svg' alt="Image">
                 <div class="mb-4">
                   <h3>Sheer Chai</h3>
                 </div>
