--- a/index.html
+++ b/index.html
@@ -201,14 +201,13 @@
       </div>
 
 
-        <!-- </div>
-        </div> -->
-      </div>
     </div>
+  </div>
+
 
     <div class="untree_co-section pb-0" id="about-section">
-      <div class="row mb-5">
-        <div class="col-lg-7 text-center mx-auto">
+      <div class="mb-5">
+        <div class="text-center mx-auto">
           <h2 class="section-heading gsap-reveal-hero mb-0"><strong>O нас</strong></h2>
   
           <div class="wave gsap-reveal-hero" >
@@ -395,13 +394,12 @@
           <div class="owl-carousel owl-3-slider">
             <div class="item">
               <div class="testimonial-v1">
-                <img src='images/clients/7.svg' alt="Image">
+                <img src='images/clients/7.svg' class="img-fluid" alt="Image">
                 <div class="mb-4">
                   <h3>Sheer Chai</h3>
                 </div>
               </div>
             </div>
-            <!-- END .item -->
             <div class="item">
               <div class="testimonial-v1 ">
                   <img src='images/clients/2.svg' class="img-fluid" alt="Image">
@@ -410,25 +408,22 @@
                 </div>
               </div>
             </div>
-            <!-- END .item -->
             <div class="item">
               <div class="testimonial-v1">
-                <img src='images/clients/6.svg' alt="Image">
+                <img src='images/clients/6.svg' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>Marplast</h3>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/7.svg' class="img-fluid" alt="Image">
                 <div class="mb-4">
                   <h3>Sheer Chai</h3>
                 </div>
               </div>
             </div>
-            <!-- END .item -->
-            <div class="item">
-              <div class="testimonial-v1">
-                <img src='images/clients/7.svg' alt="Image">
-                <div class="mb-4">
-                  <h3>Sheer Chai</h3>
-                </div>
-              </div>
-            </div>
-            <!-- END .item -->
           </div>
         </div>
       </div>
@@ -548,8 +543,9 @@
               <h3>Главная</h3>
               <ul class="list-unstyled float-left links">
                 <li><a href="#services-section">Услуги</a></li>
-                <li><a href="#">O нас</a></li>
-                <li><a href="#">Kонтакты</a></li>
+                <li><a href="#about-section">O нас</a></li>
+                <li><a href="#clients-section">Наши клиенты</a></li>
+                <li><a href="#contact-section">Kонтакты</a></li>
               </ul>
             </div>
           </div>
