--- a/laboratory.html
+++ b/laboratory.html
@@ -141,9 +141,10 @@
           <div class="widget">
             <h3>Главная</h3>
             <ul class="list-unstyled float-left links">
-              <li><a href="#services-section">Услуги</a></li>
-              <li><a href="#">O нас</a></li>
-              <li><a href="#">Kонтакты</a></li>
+              <li><a href="index.html#services-section">Услуги</a></li>
+              <li><a href="index.html#about-section">O нас</a></li>
+              <li><a href="index.html#clients-section">Наши клиенты</a></li>
+              <li><a href="index.html#contact-section">Kонтакты</a></li>
             </ul>
           </div>
         </div>
