--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       <div class="lines"></div>
     </div>
   </div>
-  <!-- END lines -->
 
   <div class="site-mobile-menu site-navbar-target">
     <div class="site-mobile-menu-header">
@@ -218,10 +217,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="row justify-content-center mb-3">
-        </div>
-  
-        <div class="row justify-content-center">
+        <div class="row justify-content-center text-center">
           <div class="col-lg-7">
   
   
@@ -243,138 +239,6 @@
       </div>
     </div>
 
-    <!-- <div class="untree_co-section pb-0" id="services-section">
-      <div class="container">
-        <div class="row mb-4">
-          <div class="col-lg-7 text-center mx-auto">
-            <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Services</strong></h2>
-            <p class="gsap-reveal-hero">The Big Oxmox advised her not to do so, because there were thousands of bad Commas.</p>
-            <div class="wave gsap-reveal-hero" >
-              <svg>
-                <path d="M10,10 L50,100 L90,50" stroke="#0389ff"></path>
-              </svg>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-
-          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
-            <div class="service text-center">
-              <div class="gsap-reveal-hero mb-3">
-                <span class="icon-service"><img src="images/svg/service-icon-7.svg" alt="Image" class="img-fluid"></span>
-              </div>
-              <h3 class="gsap-reveal-hero">Marketing</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
-            <div class="service text-center">
-              <div class="gsap-reveal-hero mb-3">
-                <span class="icon-service"><img src="images/svg/service-icon-6.svg" alt="Image" class="img-fluid"></span>
-              </div>
-              <h3 class="gsap-reveal-hero">Photography</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-          </div>
-
-          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
-            <div class="service text-center">
-              <div class="gsap-reveal-hero mb-3">
-                <span class="icon-service"><img src="images/svg/service-icon-1.svg" alt="Image" class="img-fluid"></span>
-              </div>
-              <h3 class="gsap-reveal-hero">Web Design</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-          </div>
-
-
-          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
-            <div class="service text-center">
-              <div class="gsap-reveal-hero mb-3">
-                <span class="icon-service"><img src="images/svg/service-icon-8.svg" alt="Image" class="img-fluid"></span>
-              </div>
-              <h3 class="gsap-reveal-hero">App Development</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-          </div>
-
-          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
-            <div class="service text-center">
-              <div class="gsap-reveal-hero mb-3">
-                <span class="icon-service"><img src="images/svg/service-icon-4.svg" alt="Image" class="img-fluid"></span>
-              </div>
-              <h3 class="gsap-reveal-hero">Search Ranking</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-          </div>
-
-          <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
-            <div class="service text-center">
-              <div class="gsap-reveal-hero mb-3">
-                <span class="icon-service"><img src="images/svg/service-icon-5.svg" alt="Image" class="img-fluid"></span>
-              </div>
-              <h3 class="gsap-reveal-hero">Branding</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div> -->
-
-
-    <!-- <div class="untree_co-section pb-0">
-      <div class="container">
-        <div class="row mb-4">
-          <div class="col-lg-7 text-center mx-auto">
-            <h2 class="section-heading gsap-reveal-hero mb-0"><strong>My Skillset</strong></h2>
-            <p class="gsap-reveal-hero">The Big Oxmox advised her not to do so, because there were thousands of bad Commas.</p>
-            <div class="wave gsap-reveal-hero" >
-              <svg>
-                <path d="M10,10 L50,100 L90,50" stroke="#0389ff"></path>
-              </svg>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-6 col-sm-6 col-md-6 col-lg-3 text-center" data-aos="fade-up" data-aos-delay="0">
-            <div class="progressbar" data-animate="false">
-              <div class="circle" data-percent="98">
-                <div class="number"></div>
-                <p class="caption">WordPress</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-6 col-lg-3 text-center" data-aos="fade-up" data-aos-delay="100">
-            <div class="progressbar" data-animate="false">
-              <div class="circle" data-percent="95">
-                <div class="number"></div>
-                <p class="caption">Web Design</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-6 col-lg-3 text-center" data-aos="fade-up" data-aos-delay="200">
-            <div class="progressbar" data-animate="false">
-              <div class="circle" data-percent="89">
-                <div class="number"></div>
-                <p class="caption">Web/Mobile App</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-6 col-lg-3 text-center" data-aos="fade-up" data-aos-delay="300">
-            <div class="progressbar" data-animate="false">
-              <div class="circle" data-percent="85">
-                <div class="number"></div>
-                <p class="caption">Photoshop</p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div> -->
-
     <div class="untree_co-section testimonial-wrap" id="clients-section">
       <div class="container">
         <div class="row mb-5">
@@ -383,7 +247,7 @@
 
             <div class="wave gsap-reveal-hero" >
               <svg>
-                <path d="M10,10 L50,100 L90,50" stroke="#0389ff"></path>
+                <path d="M10,10 L50,100 L90,50" stroke="#e81c24"></path>
               </svg>
             </div>
           </div>
@@ -418,9 +282,65 @@
             </div>
             <div class="item">
               <div class="testimonial-v1">
-                <img src='images/clients/7.svg' class="img-fluid" alt="Image">
+                <img src='images/clients/artel.png' class="img-fluid" alt="Image">
                 <div class="mb-4">
-                  <h3>Sheer Chai</h3>
+                  <h3>Artel</h3>
+                </div>
+              </div>
+            </div>
+             <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/4.svg' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>Bi1</h3>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/9.svg' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>ZOODPAY</h3>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/10.svg' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>AVO Bank</h3>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/olc.png' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>Orient logistics center</h3>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/beeline1.png' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>Beeline</h3>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/shox.svg' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>Shox international hospital</h3>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/8.svg' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>LUKOIL</h3>
                 </div>
               </div>
             </div>
@@ -572,7 +492,7 @@
               <address>ООО “SPEKTR AVTOMATIKA” 100 207, город Ташкент, Яшнабадский район, ул., Паркентская, 327.
               </address>
               <ul class="list-unstyled links mb-4">
-                <li><a href="tel://11234567890">+(+998 99) 171 30 00</a></li>
+                <li><a href="tel://11234567890">(+998 99) 171 30 00</a></li>
               </ul>
             </div>
           </div> 
