some bugs fixed

--- a/cleaning.html
+++ b/cleaning.html
@@ -171,7 +171,7 @@
               <li><a href="plumbing.html">Сантехника</a></li>
               <li><a href="video.html">Видеонаблюдения</a></li>
               <li><a href="logistics.html">Логистика</a></li>
-              <li><a href="electric.html">Електромонтаж</a></li>
+              <li><a href="electric.html">Электромонтаж</a></li>
               <li><a href="cleaning.html">Услуги клининга</a></li>
               <li><a href="laboratory.html">Электротехническая лаборатория</a></li>
             </ul>
