--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Електромонтаж</h3>
+                  <h3>Электромонтаж</h3>
                 </div>
               </div>
               <img src="images/electric/e2.jpg" height="400" class="lazyload" alt="Images" />
@@ -274,7 +274,7 @@
             </div>
             <div class="item">
               <div class="testimonial-v1">
-                <img src='images/clients/6.svg' class="img-fluid" alt="Image">
+                <img src='images/clients/marplast.svg' class="img-fluid" alt="Image">
                 <div class="mb-4">
                   <h3>Marplast</h3>
                 </div>
@@ -290,9 +290,9 @@
             </div>
              <div class="item">
               <div class="testimonial-v1">
-                <img src='images/clients/4.svg' class="img-fluid" alt="Image">
+                <img src='images/clients/4.svg' style="width: 200px; height: 185px !important" class="img-fluid" alt="Image">
                 <div class="mb-4">
-                  <h3>Bi1</h3>
+                  <h3>Bi 1</h3>
                 </div>
               </div>
             </div>
@@ -306,7 +306,7 @@
             </div>
             <div class="item">
               <div class="testimonial-v1">
-                <img src='images/clients/10.svg' class="img-fluid" alt="Image">
+                <img src='images/clients/avo.svg' class="img-fluid" alt="Image">
                 <div class="mb-4">
                   <h3>AVO Bank</h3>
                 </div>
@@ -314,9 +314,9 @@
             </div>
             <div class="item">
               <div class="testimonial-v1">
-                <img src='images/clients/olc.png' class="img-fluid" alt="Image">
+                <img src='images/clients/olc.png' style="width: 250px !important;" class="img-fluid" alt="Image">
                 <div class="mb-4">
-                  <h3>Orient logistics center</h3>
+                  <h3>Orient логистическая компания</h3>
                 </div>
               </div>
             </div>
@@ -332,7 +332,7 @@
               <div class="testimonial-v1">
                 <img src='images/clients/shox.svg' class="img-fluid" alt="Image">
                 <div class="mb-4">
-                  <h3>Shox international hospital</h3>
+                  <h3>Частная клиника "Shox MED"</h3>
                 </div>
               </div>
             </div>
@@ -341,6 +341,22 @@
                 <img src='images/clients/8.svg' class="img-fluid" alt="Image">
                 <div class="mb-4">
                   <h3>LUKOIL</h3>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/tbc.svg' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>TBC Bank</h3>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="testimonial-v1">
+                <img src='images/clients/mifi.svg' class="img-fluid" alt="Image">
+                <div class="mb-4">
+                  <h3>Ташкентский филиал НИЯУ МИФИ</h3>
                 </div>
               </div>
             </div>
@@ -478,7 +494,7 @@
                 <li><a href="plumbing.html">Сантехника</a></li>
                 <li><a href="video.html">Видеонаблюдения</a></li>
                 <li><a href="logistics.html">Логистика</a></li>
-                <li><a href="electric.html">Електромонтаж</a></li>
+                <li><a href="electric.html">Электромонтаж</a></li>
                 <li><a href="cleaning.html">Услуги клининга</a></li>
                 <li><a href="laboratory.html">Электротехническая лаборатория</a></li>
               </ul>
